# snowflake-connector

./: .gitignore  Cargo.toml  README.md
environment_variables/: snowflake_private_key_path.txt  snowflake_public_key_path.txt
snowflake-connector/: Cargo.toml  README.md
snowflake-connector/src/: errors.rs  jwt.rs  lib.rs
snowflake-derive/: Cargo.toml
snowflake-derive/src/: lib.rs
snowflake-deserialize/: Cargo.toml
snowflake-deserialize/src/: bindings.rs  datetime.rs  lib.rs
snowflake-deserializer/: Cargo.toml
snowflake-deserializer/src/: bindings.rs  data_manipulation.rs  insert.rs  lazy.rs  lib.rs  multiple.rs
snowflake_connector_derive/: Cargo.toml  build.rs  snowflake-data.json.bak  snowflake-info.toml.bak
snowflake_connector_derive/src/: lib.rs
snowflake_connector_macros/: Cargo.toml
snowflake_connector_macros/snowflake_connector_macros_derive/: Cargo.toml
src/: jwt.rs  lib.rs
