[package]
name = "snowflake-connector"
version = "0.16.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Connect to Snowflake. Forked from https://github.com/Ripper53/snowflake-connector"
readme = "README.md"
keywords = ["snowflake", "data-science"]
categories = ["database"]
exclude = ["/environment_variables"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = [ "time" ]
time = [ "snowflake-deserialize/time" ]

[dependencies]
snowflake-deserialize = { path = "snowflake-deserialize" }
snowflake-derive = { path = "snowflake-derive" }

anyhow = "1.0.66"

serde = { version = "1.0.147", features = ["derive"] }
reqwest = { version = "0.11", default_features = false, features = [ "json", "rustls-tls", "gzip" ] }
jwt-simple = "0.11.2"
uuid = { version = "1", features = ["v4", "fast-rng" ] }
serde_json = "1.0.102"
base64 = "0.21.2"


[workspace]
members = [
    "snowflake-deserialize",
    "snowflake-derive",
]
