[package]
name = "snowflake-connector"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Connect to Snowflake"
readme = "README.md"
repository = "https://github.com/Ripper53/snowflake-connector"
keywords = ["snowflake", "data-science"]
categories = ["database"]
exclude = ["/environment_variables"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snowflake-deserializer = { version = "0.1", path = "../snowflake-deserializer" }
snowflake_connector_derive = { version = "0.1", optional = true, path = "../snowflake_connector_derive" }

thiserror = "1.0.37"
anyhow = "1.0.66"

serde = { version = "1.0.147", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
jwt-simple = "0.11.2"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }

[dev-dependencies]
snowflake-deserializer = { version = "0.1", path = "../snowflake-deserializer" }
snowflake_connector_derive = { version = "0.1", path = "../snowflake_connector_derive" }
