[package]
name = "snowflake-connector"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Connect to Snowflake"
readme = "README.md"
repository = "https://github.com/Ripper53/snowflake-connector"
keywords = ["snowflake", "data-science"]
categories = ["database"]
exclude = ["/environment_variables"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snowflake-deserializer = { version = "0.3", path = "../snowflake-deserializer" }
snowflake_connector_derive = { version = "0.2", optional = true, path = "../snowflake_connector_derive" }

thiserror = "2.0.12"
anyhow = "1.0.98"

serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.21", features = ["json"] }
jwt-simple = "0.11.2"
uuid = { version = "1.17.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }

[dev-dependencies]
snowflake-deserializer = { version = "0.3", path = "../snowflake-deserializer" }
snowflake_connector_derive = { version = "0.2", path = "../snowflake_connector_derive" }

[features]
derive = ["snowflake_connector_derive"]
