[package]
name = "snowflake-connector"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Connect to Snowflake"
readme = "README.md"
repository = "https://github.com/Ripper53/snowflake-connector"
keywords = ["snowflake", "database", "data-science"]
categories = ["database"]
exclude = ["/environment_variables"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snowflake-deserializer = { version = "0.3", path = "../snowflake-deserializer" }
snowflake_connector_derive = { version = "0.2", path = "../snowflake_connector_derive", optional = true }

[features]
default = ["derive"]
derive = ["snowflake_connector_derive"]
