[package]
name = "snowflake-derive"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Connect to Snowflake, used with snowflake-deserializer crate. Forked from https://github.com/Ripper53/snowflake-connector"
keywords = ["snowflake", "data-science"]
categories = ["database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
snowflake-deserialize = { path = "../snowflake-deserialize" }

