[package]
name = "snowflake-deserializer"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Connect to Snowflake, used with snowflake-connector crate"
repository = "https://github.com/Ripper53/snowflake-connector"
keywords = ["snowflake", "data-science"]
categories = ["database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
anyhow = "1.0.66"
chrono = "0.4.23"
rust_decimal = "1.27.0"
