[package]
name = "snowflake-deserializer"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Connect to Snowflake, used with snowflake-connector crate"
repository = "https://github.com/Ripper53/snowflake-connector"
keywords = ["snowflake", "data-science"]
categories = ["database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
anyhow = "1.0.66"
chrono = "0.4.23"
rust_decimal = { version = "1.37", optional = true, features = ["macros"] }

reqwest = { version = "0.12.21", features = ["json"] }
jwt-simple = "0.11.2"
uuid = { version = "1.17.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
serde_json = "1.0.140"

[features]
decimal = ["dep:rust_decimal"]
