[package]
name = "snowflake_connector_derive"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Connect to Snowflake, used with snowflake-deserializer crate"
repository = "https://github.com/Ripper53/snowflake-connector"
keywords = ["snowflake", "data-science"]
categories = ["database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"
serde_json = "1.0"
heck = "0.5"

[build-dependencies]
snowflake-deserializer = { version = "0.4", path = "../snowflake-deserializer" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
toml = "0.9.2"
serde_json = "1.0"
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"
heck = "0.5"
prettyplease = "0.2.35"

[features]
insert = []
